[gd_scene format=3 uid="uid://cpygu4nskpf7o"]

[ext_resource type="Script" uid="uid://dux8bqlqbg27i" path="res://addons/diablo_huma_studio/db_manager/visual_editors/create_data_type_menu/property_row.gd" id="1_script"]

[node name="PropertyRow" type="HBoxContainer" unique_id=1876582674]
script = ExtResource("1_script")

[node name="PropertyNameInput" type="LineEdit" parent="." unique_id=90569333]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "property_name"

[node name="PropertyTypeSelect" type="OptionButton" parent="." unique_id=10538268]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
selected = 0
item_count = 10
popup/item_0/text = "String"
popup/item_0/id = 0
popup/item_1/text = "int"
popup/item_1/id = 1
popup/item_2/text = "float"
popup/item_2/id = 2
popup/item_3/text = "bool"
popup/item_3/id = 3
popup/item_4/text = "Vector2"
popup/item_4/id = 4
popup/item_5/text = "Vector3"
popup/item_5/id = 5
popup/item_6/text = "Color"
popup/item_6/id = 6
popup/item_7/text = "Array"
popup/item_7/id = 7
popup/item_8/text = "Resource"
popup/item_8/id = 8
popup/item_9/text = "NodePath"
popup/item_9/id = 9

[node name="RemoveButton" type="Button" parent="." unique_id=1346489958]
layout_mode = 2
text = "-"

[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
